# iridium-rust-client-lib-dev

./: Cargo.toml
iridium-rust-client-lib/: Cargo.toml
iridium-rust-client-lib/src/: callback_service.rs  lib.rs
src/: main.rs
